--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
 
       <div class="subtitle">
-        <h3>Plastic2048 was created to visualize how the use of plastic lead to the endangerment of marine life.</h3>
+        <h3>Plastic2048 was created to visualize how the use of plastic leads to the endangerment of marine life.</h3>
       </div>
     </div>
 
